# qispace-sdk-code-samples

./: .gitignore  README.md
IoT/Renesas/: README.md  SDK_Version.txt
IoT/Renesas/CK-RA6M5/qispace_ck_ra6m5/: .cproject  .secure_xml  configuration.xml  qispace_ck_ra6m5.elf.launch  ra_cfg.txt
IoT/Renesas/CK-RA6M5/qispace_ck_ra6m5/src/: demo_ds.c  demo_kem.c  hal_entry.c  maintest.c
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_ds/: .cproject  .secure_azone  .secure_xml  qispace_ek-ra6m5.elf.jlink  qispace_ek_ra6m5_ds Release.jlink  ra_cfg.txt
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_ds/qispace-SDK-lib/: LICENSE_MIT
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_ds/ra_gen/: bsp_clock_cfg.h  common_data.c  hal_data.c  hal_data.h  pin_data.c  vector_data.c
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_ds/src/: demo_ds.c  hal_entry.c  qstdlib.c
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_kem/: .cproject  configuration.xml
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_kem/qispace-SDK-R1.9.4-iot/: demo_iot.txt
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_kem/ra_gen/: vector_data.h
IoT/Renesas/EK-RA6M5/qispace_ek_ra6m5_kem/src/: demo_kem.c  hal_entry.c  hal_entry.h
IoT/Renesas/ck-ra6m5_LED_Blink/qispace_m5/: .cproject  .project  .secure_xml  configuration.xml  qispace_m5 Debug_Flat.launch  ra_cfg.txt
IoT/Renesas/ck-ra6m5_LED_Blink/qispace_m5/ra_gen/: bsp_clock_cfg.h  pin_data.c
IoT/Renesas/ck-ra6m5_LED_Blink/qispace_m5/src/: demo_ds.c  demo_kem.c  demo_qeep.c  (+5 more)
IoT/Renesas/ek-ra6m5_Console/qispace_ek-ra6m5/: .cproject  .project  qispace_demo_ekra6m5.elf (2).launch  qispace_demo_ekra6m5.elf.launch  usb_pcdc_ek_ra6m5_ep Debug_Flat.jlink  usb_pcdc_ek_ra6m5_ep Debug_Flat.launch
IoT/Renesas/qispace_demo_ekra6m5/: .cproject  .project  .secure_azone  .secure_xml  configuration.xml  ra_cfg.txt  usb_pcdc_ek_ra6m5_ep.hex
IoT/Renesas/qispace_demo_ekra6m5/src/: demo_ds.c  demo_kem.c  error.h  masq_ds.h  masq_kem.h  masq_kem_error.h  qispace_sequr.h
Java/: .gitignore  README.md  settings.gradle
Java/QiSpace_SDK_Lib/: TODO.md
Java/app/: build.gradle
Kotlin/: .gitignore  README.md  build.gradle  settings.gradle
Kotlin/app/: build.gradle
Kotlin/app/src/main/: AndroidManifest.xml
Kotlin/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Kotlin/gradle/wrapper/: gradle-wrapper.properties
ObjectC/: README.md
ObjectC/QiSpaceObjectiveC/: AppDelegate.h  Main.storyboard  Qeep_Demo.m  SceneDelegate.m  ViewController.h  ViewController.m  main.m  qeepObjCWrapper.h  qeepObjCWrapper.m  sequrObjCWrapper.h
ObjectC/QiSpaceObjectiveC.xcodeproj/: project.pbxproj
ObjectC/QiSpaceObjectiveC.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ObjectC/QiSpaceObjectiveCTests/: QiSpaceObjectiveCTests.m
Python/: QiSpaceSdkLib.py  demo_sequr_key_gen.py  demo_sequr_key_query.py  install.sh  readme.md  requirements.txt
Swift/: README.md
Swift/QiSpace_SDK_Lib/: QiSpaceiOSDemoApp-Bridging-Header.h
Swift/QiSpaceiOSDemoApp/: LandingView.swift  QiSpaceiOSDemoAppApp.swift
Swift/QiSpaceiOSDemoApp.xcodeproj/: project.pbxproj
Swift/QiSpaceiOSDemoApp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Swift/QiSpaceiOSDemoApp/Assets.xcassets/GrayBGColour.colorset/: Contents.json
Swift/QiSpaceiOSDemoApp/Assets.xcassets/back_button_image.imageset/: Contents.json
Swift/QiSpaceiOSDemoAppTests/: QiSpaceiOSDemoAppTests.swift
Swift/QiSpaceiOSDemoAppUITests/: QiSpaceiOSDemoAppUITests.swift
c/: .gitignore  Makefile  README.md  make.auto_platform  make.ds  make.kem  make.pqrnd  make.qeep  make.sequr
c++/: .gitignore
c++/demos/: Makefile  README.md  make.auto_platform  make.ds  make.kem  make.pqrnd  make.qeep  make.sequr
c++/demos/src/: RestApiUtil.cpp  RestApiUtil.h  base64.cpp  base64.h  demo_masq_ds.cpp  demo_masq_kem.cpp  demo_pqrnd.cpp  demo_qeep.cpp  demo_sequr.cpp
c++/sequr_util/: Makefile  README.md  demo_pqrnd.cpp  demo_qeep.cpp  demo_sequr_key_gen.cpp  demo_sequr_key_query.cpp  demo_sequr_qe_gen.cpp  help_util.cpp  help_util.h  json_util.cpp  json_util.h  make.auto_platform  sequr_util.cpp  sequr_util.h
c/Java/: README.md
c/Java/gradle/wrapper/: gradle-wrapper.properties
c/Kotlin/: README.md  build.gradle
c/ObjectC/: .gitignore  README.md
c/ObjectC/QiSpaceObjectiveC/: AppDelegate.m  Masq_Demo.h  Masq_Demo.m  Masq_Demo.xib  Qeep_Demo.h  Qeep_Demo.xib  SceneDelegate.h  Sequr_Demo.h  Sequr_Demo.m  Sequr_Demo.xib  sequrObjCWrapper.m
c/ObjectC/QiSpaceObjectiveCUITests/: QiSpaceObjectiveCUITests.m
c/Swift/: .gitignore  LICENSE  README.md
c/Swift/QiSpace_SDK_Lib/: TODO.md
c/Swift/QiSpaceiOSDemoApp/: MasqDemo.swift  QeepDemo.swift  SequrDemo.swift  qeepSwiftWrapper.swift  sequrSwiftWrapper.swift
c/demos/: LICENSE  Makefile  README.md  make.auto_platform  make.ds  make.kem
c/demos/src/: RestApiUtil.cpp  base64.h  demo_masq_ds.c  demo_masq_kem.c  demo_pqrnd.c  demo_qeep.c
c/sequr_util/: Makefile  README.md  demo_pqrnd.c  demo_qeep.c  demo_sequr_key_gen.c  demo_sequr_key_query.c  demo_sequr_qe_gen.c  help_util.c  help_util.h  json_util.c  make.auto_platform  qeep_file.c  sequr_util.c  sequr_util.h
c/src/: RestApiUtil.h  base64.cpp  demo_masq_ds.c  demo_masq_kem.c  demo_pqrnd.c  demo_qeep.c  demo_sequr.c
c/src/sequr_qk/: Makefile  README.md  demo_sequr_key_gen.c  help_util.c  json_util.h  sequr_util.c
go/: README.md  demo_sequr.go
go/lib/: error.h  qispace_sequr.h
(+81 files in other folders)
